# TreLLM

./: .gitignore  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  demo_or_adapter.yml  external_validation.yml  good_first_task.yml  research_extension.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
benchmarks/v0.3-iclr/: protocol.json
docs/: academic_report_plan.md  advanced_integrations_security.md  agent_skills.md  agent_skills_index.md  artifact_portability.md  benchmark_challenges.md  benchmark_maturity.md  benchmark_submissions.md  benchmark_v0_3_iclr_protocol.md  broker_adapter_contract.md  claim_boundaries.md  claim_boundary_review_quickstart.md  community_milestones.md  community_operations.md  community_participation.md  community_tasks.md  contributor_roadmap.md  demo_artifacts.yaml  demo_matrix.md  deterministic_baseline_submission_quickstart.md  evidence_labels.md  execution_calibration_priority.md  execution_calibration_quickstart.md  execution_model.md  execution_model_boundaries.md  extension_walkthrough.md  external_validation.md  external_validation_quickstart.md  financial_audit_agent_benchmark.md  getting_started.md  live_trading_readiness.md  market_rules.md  narrative_positioning.md  observability.md  plugin_development.md  plugin_interfaces.md  poe_skill_task_experiments.md  public_artifact_privacy.md  pypi_release.md  related_work.md  (+6 more)
docs/assets/: trellm_3min_demo_storyboard.json
docs/blog/: why_llm_trading_agents_need_audit_benchmarks.md
docs/launch/: README.md  blog_outline.md  demo_video.md  discussion_seeds.md  issue_backlog.md  pages_demo.md  release_artifacts_v0.2.0.json  release_artifacts_v0.2.0.md  release_candidate_v0.2.1.json  (+7 more)
examples/: README.md  akshare_csv_reuse_demo.py  almgren_chriss_stress_demo.py  alpaca_paper_export_demo.py  ashare_market_rules_demo.py  audit_trajectory_walkthrough.py  broker_approval_safety_demo.py  broker_capability_manifest_demo.py  broker_response_reconciliation_demo.py  broker_response_status_mapping_fixture_demo.py  crisis_snapshot_demo.py  crypto_microstructure_stress_demo.py  custom_plugin_demo.py  dry_run_broker_adapter_demo.py  execution_realism_sweep_demo.py  extension_walkthrough_demo.py  futures_roll_risk_demo.py  hk_market_rules_demo.py  holdings_csv_import_demo.py  liquidity_halt_demo.py  live_readiness_preflight_demo.py  llm_cache_replay_demo.py  market_rules_fixture_demo.py  max_drawdown_risk_preset_demo.py  mock_paper_sandbox_client_demo.py  operator_runbook_demo.py  portfolio_markowitz_demo.py  quickstart_core_benchmark.py  representation_signature_demo.py  retail_planner_demo.py  rl_policy_baseline_demo.py  run_momentum_demo.py  sidecar_data_demo.py  visual_tour_demo.py
notebooks/: tradearena_5min_colab.ipynb
plugins/: README.md
schemas/: benchmark_submission.schema.json  broker_adapter_capability.schema.json  broker_approval_artifact.schema.json  broker_handoff_artifact.schema.json  broker_response_artifact.schema.json  calibration_profile.schema.json  demo_artifact_contract.schema.json  direct_provider_manifest.schema.json  eval_trace_style.schema.json  live_readiness_preflight.schema.json  operator_runbook_artifact.schema.json  reproduction_report.schema.json  skill_answer_set.schema.json  skill_task_rubric.schema.json  trajectory.schema.json
scripts/: analyze_execution_sensitivity_llm.py  analyze_memory_pollution_llm.py  build_benchmark_page.py  build_benchmark_registry.py  build_demo_video.py  build_external_validation_bundle.py  build_llm_cache_manifest.py  build_release_candidate_manifest.py  build_skill_index.py  build_v03_claim_boundary_audit.py  build_v03_contamination_control_audit.py  build_v03_direct_api_call_packets.py  build_v03_direct_api_matrix_gate.py  build_v03_direct_api_matrix_plan.py  build_v03_direct_api_submission_checklist.py  build_v03_evidence_index.py  build_v03_external_reproduction_gate.py  build_v03_finaudit_direct_model_plan.py  build_v03_variance_decomposition.py  calibrate_execution_model.py  calibrate_quote_fill_model.py  check_local.ps1  check_release_readiness.py  check_repository_metadata.py  compare_execution_to_fills.py  download_akshare_ashare_daily.py  download_binance_microstructure_sample.py  download_hf_mirror_snapshot.py  download_yahoo_daily.py  freeze_forward_window.py  generate_audit_tasks.py  generate_claim_boundary_tasks.py  hash_broker_handoff_artifact.py  hash_run.py  rebuild_intraday_from_cache.py  render_agent_autopsy_dashboard.py  render_audit_report.py  render_execution_sensitivity_figures.py  render_finaudit_figures.py  render_mempollution_figures.py  (+43 more)
skills/: README.md
tests/: test_almgren_chriss_stress.py  test_ashare_market_rules.py  test_audit_report.py  test_benchmark_submission.py  test_benchmark_v0_2.py  test_claim_boundary_tasks.py  test_components.py  test_defect_injection.py  test_direct_provider_manifest.py  test_documentation_identity.py  test_examples.py  test_execution_calibration_stability.py  test_execution_fill_comparison.py  test_execution_sensitivity_llm_analysis.py  test_execution_sensitivity_sweep.py  test_execution_simulator.py  test_experiments.py  test_external_validation_bundle.py  test_external_validation_docs.py  test_forward_window_freeze.py  test_hk_market_rules.py  test_intent_execution_gap.py  test_issue_demos.py  test_liquidity_halt.py  test_llm_agent.py  test_market_rules_fixture.py  test_max_drawdown_risk.py  test_memory_pollution.py  test_memory_pollution_llm_analysis.py  test_notebook_quickstart.py  test_observability_export.py  test_offline_tracking_export.py  test_plugin_examples.py  test_plugin_scaffold.py  test_poe_skill_task_matrix.py  test_power_analysis.py  test_public_entrypoint_identity.py  test_readme_assets.py  test_real_data.py  test_redaction_policy.py  (+31 more)
(+298 files in other folders)
