[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradearena-benchmark"
version = "0.2.0"
description = "Auditable research prototype for financial-agent reliability, risk gates, and intent-to-execution trajectories."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TradeArena Contributors" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/weich97/TradeArena"
Repository = "https://github.com/weich97/TradeArena"
Documentation = "https://github.com/weich97/TradeArena/blob/main/docs/getting_started.md"
Issues = "https://github.com/weich97/TradeArena/issues"

[project.optional-dependencies]
data = ["pandas>=2.0", "yfinance>=0.2"]
dev = ["pytest>=7.0", "pytest-cov>=5.0", "pillow>=10.0", "ruff>=0.6"]
embeddings = ["sentence-transformers>=3.0"]
ashare = ["akshare>=1.18"]

[project.scripts]
tradearena = "tradearena.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
