[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradearena-benchmark"
version = "0.2.0"
description = "LLM-driven trading audit and control system with replayable trajectories, risk gates, and TradeArena leaderboard artifacts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TreLLM Contributors" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/weich97/TradeArena"
Repository = "https://github.com/weich97/TradeArena"
Documentation = "https://github.com/weich97/TradeArena/blob/main/docs/getting_started.md"
Issues = "https://github.com/weich97/TradeArena/issues"

[project.optional-dependencies]
data = ["pandas>=2.0", "yfinance>=0.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "pillow>=10.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "jsonschema>=4.22",
]
embeddings = ["sentence-transformers>=3.0"]
ashare = ["akshare>=1.18"]

[project.scripts]
tradearena = "tradearena.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F", "I", "UP", "B", "C4", "RET", "RUF"]
ignore = [
    # Keep the first strictness step focused on maintainability without forcing
    # broad behavioral edits or large public-output rewrites.
    "B905",
    "RUF005",
    "RUF007",
    "RUF022",
]

[tool.mypy]
files = ["src/tradearena/core", "src/tradearena/evaluation", "src/tradearena/execution", "src/tradearena/tools"]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
